--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: status_bar_tap
 description: A Flutter package that enables scroll-to-top functionality when tapping the status bar (iOS) or top area (Android). Supports platform-specific configuration.
-version: 1.0.1
+version: 1.0.2
 homepage: https://github.com/Twwan/status_bar_tap
 repository: https://github.com/Twwan/status_bar_tap
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=1.17.0"
+  sdk: ^3.9.0
+  flutter: ">=3.35.0"
 
 dependencies:
   flutter:
@@ -15,9 +15,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 example:
   - lib/main.dart
   - lib/single_controller_screen.dart
-  - lib/multi_controllers_screen.dart
+  - lib/multiple_controllers_screen.dart
